--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
   }
 </style>
 <body>
-  <app-home></app-home>
+  <!-- <app-home></app-home> -->
+  <app-detail-product></app-detail-product>
+  <!-- <app-order></app-order> -->
 </body>
 </html>
