--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <!-- <app-home></app-home> -->
   <!-- <app-detail-product></app-detail-product> -->
   <!-- <app-order></app-order> -->
-  <!-- <app-order-detail></app-order-detail> -->
+  <!-- <app-detail-order></app-detail-order> -->
   <!-- <app-login></app-login> -->
   <!-- <app-register></app-register> -->
   <app-root></app-root>
